--- a/assets/style.css
+++ b/assets/style.css
@@ -29,3 +29,33 @@ body {
     font-size:1.2em;
     font-weight: normal;
 }
+
+.chart .value-marker {
+    position: absolute;
+    display: block;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 3px 4px 4px 4px;
+    border: solid 0px;
+    text-align: center;
+    height: 1.85em; 
+    width: 2.40em;
+    border-radius: 1px;
+}
+
+.chart .value-marker:after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 0.60em;
+    width: 0.60em;
+    top: 1.50em;
+    border-style: solid;
+    background-color: inherit;
+    border-width: 0px 0px 1px 1px;
+    border-color: inherit;
+    transform: rotate(-45deg);
+    left: 0.90em;
+    z-index: -10;
+}
+
